# svm-thing-1

./: .gitignore  README.md  pyproject.toml
src/hw1/: __init__.py  cnn.py  cross_validation.py  features.py  knn.py  main.py  svm.py  visualization.py
typings/sklearn/: README.md
typings/sklearn/neighbors/: _classification.pyi
