[project]
name = "hw1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn>=1.5.1",
    "pillow>=10.4.0",
    "pyright>=1.1.378",
    "pandas>=2.2.2",
    "types-pillow>=10.2.0.20240822",
    "annoy>=1.17.3",
    "xxhash>=3.5.0",
    "matplotlib>=3.9.2",
    "pip>=24.2",
    "torch>=2.4.0",
    "keras>=3.5.0",
    "numpy<2",
    "pyqt5>=5.15.11",
    "scikit-image",
    "beartype>=0.18.5",
    "opencv-stubs>=0.0.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]

[tool.uv]
constraint-dependencies = ["pyqt5-qt5 <=5.15.2"]  # https://github.com/astral-sh/uv/issues/7005
